--- a/index.html
+++ b/index.html
@@ -4,12 +4,142 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
     <link rel="stylesheet" href="css/column.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>Figma</title>
 </head>
 <body>
-    
+    <header class="page-head">
+        <div class=" container row between">
+            <div class="search row middle">
+                <div class="email row middle">
+                    <svg class="email-svg" width="32" height="32" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"><path d="M10 11c0-1.657 1.343-3 3-3h5c1.657 0 3 1.343 3 3 0 1.043-.533 1.963-1.341 2.5.808.537 1.341 1.457 1.341 2.5 0 1.657-1.343 3-3 3-.768 0-1.47-.289-2-.764V21c0 1.657-1.343 3-3 3-1.657 0-3-1.343-3-3 0-1.044.533-1.962 1.341-2.5C10.533 17.962 10 17.044 10 16c0-1.043.533-1.963 1.341-2.5C10.533 12.963 10 12.043 10 11zm3 2c-1.105 0-2-.895-2-2 0-1.105.895-2 2-2h2v4h-2zm2 1h-2c-1.105 0-2 .895-2 2 0 1.105.895 2 2 2h2v-4zm0 5h-2c-1.105 0-2 .895-2 2 0 1.105.895 2 2 2 1.105 0 2-.895 2-2v-2zm3-5c-1.105 0-2 .895-2 2 0 1.105.895 2 2 2 1.105 0 2-.895 2-2 0-1.105-.895-2-2-2zm0-1c1.105 0 2-.895 2-2 0-1.105-.895-2-2-2h-2v4h2z" fill-rule="evenodd" fill-opacity="1" fill="#fff" stroke="none"></path></svg>
+                    <div class="email-name">
+                        <h2 class="email-h2">Jamoliddin</h2>
+                        <p class="email-parag">jamoliddinnajmiddinov07@gmail.com</p>
+                    </div>
+                    <i class='bx bx-chevron-down ' style="color: #fff;"></i>
+                </div>
+                <div class="search-box">
+                    <svg class="search-svg" width="15" height="15" viewBox="0 0 15 15" xmlns="http://www.w3.org/2000/svg"><path d="M14.146 14.854l.708-.708-4.272-4.272C11.466 8.83 12 7.477 12 6c0-3.314-2.686-6-6-6-3.314 0-6 2.686-6 6 0 3.314 2.686 6 6 6 1.477 0 2.83-.534 3.874-1.418l4.272 4.272zM11 6c0 2.761-2.239 5-5 5-2.761 0-5-2.239-5-5 0-2.761 2.239-5 5-5 2.761 0 5 2.239 5 5z" fill-rule="nonzero" fill-opacity="1" fill="#6E6E6E" stroke="none"></path></svg>
+                    <input type="text" placeholder="Search files, teams, or people">
+                </div>
+                <div class="lang-button row middle">
+                    <div class="alert-icon ">
+                        <i class='bx bx-bell' style="color: #fff;"></i>
+                    </div>
+                    <div class="button-lang row middle">
+                        <div class="workspace_icon "><div class="workspace_icon--iconContainer--1gWYz"><span class="avatar  " style="display: flex; justify-content: center; color: white; background-color: rgb(255, 199, 0); width: 24px; height: 24px; line-height: 24px; font-size: 12px; border-radius: 50%;">J</span><div class="workspace_icon--shadow--2JNMX"></div></div></div>
+                    <i class='bx bx-chevron-down' style="color: #fff;"></i>
+                        
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </header>
+    <div class="main row ">
+        <aside>
+            <div class="abilities">
+                <div class="recent row same middle">
+                    <svg class="recent-svg" width="16" height="16" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg"><path d="M8 16c4.418 0 8-3.582 8-8 0-4.418-3.582-8-8-8-4.418 0-8 3.582-8 8 0 4.418 3.582 8 8 8zm0-1c-3.866 0-7-3.134-7-7 0-3.866 3.134-7 7-7 3.866 0 7 3.134 7 7 0 3.866-3.134 7-7 7zM8 4H7v5h5V8H8V4z" fill-rule="nonzero" fill-opacity="1" fill="#000" stroke="none"></path></svg>
+                    <p class="recent-parag">Recents</p>
+                </div>
+                <div class="drafts row same middle">
+                    <svg class="draft-svg" width="12" height="16" viewBox="0 0 12 16" xmlns="http://www.w3.org/2000/svg"><path d="M0 0h7.707l.147.146 4 4 .146.147V15H0V0zm1 1v13h10V5H7V1H1zm7 .707L10.293 4H8V1.707z" fill-rule="evenodd" fill-opacity="1" fill="#000" stroke="none"></path></svg>
+                    <p class="drafts-parag">Drafts</p>
+                    <span tabindex="0" class="draft-plus-svg-container raw_components--iconButtonEnabled--1oUUU raw_components--_iconButton--353Le" data-tooltip-type="text" data-tooltip="New file" aria-label="New file" data-onboarding-key="new-file-icon"><svg class="svg" width="12" height="12" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg"><path d="M5 5V0h1v5h5v1H6v5H5V6H0V5h5z" fill-rule="nonzero" fill-opacity="1" fill="#000" stroke="none"></path></svg></span>
+                </div>
+                <div class="community row same middle">
+                    <svg class="community-svg" width="32" height="32" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"><path d="M8.518 16c.219 3.104 2.46 5.649 5.415 6.324-.81-1.325-1.365-3.646-1.427-6.324H8.518zm6.982 7.5c-4.418 0-8-3.582-8-8 0-4.418 3.582-8 8-8 4.418 0 8 3.582 8 8 0 4.418-3.582 8-8 8zM13.934 8.676c-2.955.675-5.197 3.22-5.416 6.324h3.988c.062-2.678.618-5 1.428-6.324zm3.133 0c2.954.675 5.196 3.22 5.415 6.324h-3.988c-.062-2.678-.618-5-1.427-6.324zM22.482 16c-.219 3.104-2.46 5.649-5.415 6.324.81-1.325 1.365-3.646 1.427-6.324h3.988zm-5.797 4.806c.452-1.206.763-2.891.809-4.806h-3.988c.046 1.915.357 3.6.809 4.806.247.658.517 1.121.766 1.402.25.282.394.292.419.292.025 0 .17-.01.42-.292.248-.28.518-.744.765-1.402zm-2.37-10.612c-.452 1.205-.762 2.891-.809 4.806h3.988c-.046-1.915-.357-3.6-.809-4.806-.247-.658-.517-1.121-.765-1.402-.25-.282-.395-.292-.42-.292-.025 0-.17.01-.42.292-.248.28-.518.744-.765 1.402z" fill-rule="evenodd" fill-opacity="1" fill="#000" stroke="none"></path></svg>
+                    <p class="community-parag">Community</p>
+                    <span class="beta">Beta</span>
+                    <svg class="com-arrow-svg" width="14" height="10" viewBox="0 0 14 10" xmlns="http://www.w3.org/2000/svg"><path d="M0 4.75h11.29l-3.4-3.388.706-.709 4.612 4.597-4.612 4.597-.706-.709 3.4-3.388H0v-1z" fill-rule="evenodd" fill-opacity=".8" fill="#000" stroke="none"></path></svg>
+                </div>
+                <div class="upgrade row">
+                    <svg class="upgrade-svg" width="32" height="32" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"><path d="M16 23c3.866 0 7-3.134 7-7 0-3.866-3.134-7-7-7-3.866 0-7 3.134-7 7 0 3.866 3.134 7 7 7zm0 1c4.418 0 8-3.582 8-8 0-4.418-3.582-8-8-8-4.418 0-8 3.582-8 8 0 4.418 3.582 8 8 8zm0-12.1l-.354.354-3 3 .708.707 2.146-2.147v6.293h1v-6.293l2.146 2.147.708-.707-3-3L16 11.9z" fill-rule="evenodd" fill-opacity=".8" fill="#000" stroke="none"></path></svg>
+                    <p class="upgrade-parag">Upgrade plan for unlimited design files in teams</p>
+                    <button class="upgrade-btn">Upgrade</button>
+                </div>
+                <div class="team-name row middle">
+                    <span class="squre-team-name"></span>
+                    <p class="team-name-parag">Muslims</p>
+                    <span tabindex="0" class="muslim-plus-svg-container raw_components--iconButtonEnabled--1oUUU raw_components--_iconButton--353Le" data-tooltip-type="text" data-tooltip="New file" aria-label="New file" data-onboarding-key="new-file-icon"><svg class="svg" width="12" height="12" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg"><path d="M5 5V0h1v5h5v1H6v5H5V6H0V5h5z" fill-rule="nonzero" fill-opacity="1" fill="#000" stroke="none"></path></svg></span>
+                </div>
+                <div class="team-project row middle">
+                    <p class="team-project-parag">Team project</p>
+                    <span tabindex="0" class="team-project-plus-svg-container raw_components--iconButtonEnabled--1oUUU raw_components--_iconButton--353Le" data-tooltip-type="text" data-tooltip="New file" aria-label="New file" data-onboarding-key="new-file-icon"><svg class="svg" width="12" height="12" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg"><path d="M5 5V0h1v5h5v1H6v5H5V6H0V5h5z" fill-rule="nonzero" fill-opacity="1" fill="#000" stroke="none"></path></svg></span>
+                </div>
+                <div class="creat-new-team row middle">
+                    <span tabindex="0" class="creat-new-team-plus-svg-container raw_components--iconButtonEnabled--1oUUU raw_components--_iconButton--353Le" data-tooltip-type="text" data-tooltip="New file" aria-label="New file" data-onboarding-key="new-file-icon"><svg class="svg" width="12" height="12" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg"><path d="M5 5V0h1v5h5v1H6v5H5V6H0V5h5z" fill-rule="nonzero" fill-opacity="1" fill="#000" stroke="none"></path></svg></span>
+                    <p class="create-new-team-parg">Create new team</p>
+                </div>
+            </div>
+        </aside>
+        <main>
+            <div class="news-title">
+                <p class="news-title-parag">Recently viewed</p>
+            </div>
+            <div class="new-file-creation row middle" >
+                <div class="new-file-items row middle">
+                    <svg class="svg" width="32" height="32" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"><path d="M7 28h18c.552 0 1-.448 1-1V9.914c0-.265-.105-.52-.293-.707l-4.914-4.914C20.605 4.105 20.35 4 20.086 4H7c-.552 0-1 .448-1 1v22c0 .552.448 1 1 1z" fill-rule="nonzero" fill-opacity="1" fill="#18a0fb" stroke="none"></path><path d="M16.858 12.995l-.011-.003-4.403-1.255 3.257 3.257c.116-.04.24-.062.37-.062.628 0 1.138.51 1.138 1.139 0 .628-.51 1.138-1.138 1.138-.629 0-1.139-.51-1.139-1.138 0-.13.022-.254.062-.37l-3.252-3.251 1.202 4.192.01.036.008.038c.298 1.443 1.578 2.528 3.109 2.528.349 0 .683-.056.995-.159l.585-.193.435.436 1.231 1.23 1.269-1.268-1.245-1.244-.43-.431.184-.58c.097-.303.15-.627.15-.964 0-1.476-1.009-2.719-2.375-3.073l-.012-.003zm4.435 5.588l.707.707-.707.707-1.269 1.269-.707.707-.707-.707-1.23-1.231c-.412.136-.852.21-1.31.21-2.014 0-3.696-1.428-4.087-3.328l-1.658-5.785L10 10l1.133.323 5.988 1.707c1.797.466 3.123 2.098 3.123 4.04 0 .443-.068.869-.196 1.268l1.245 1.245z" fill-rule="evenodd" fill-opacity="1" fill="#fff" stroke="none"></path><path d="M20.5 8.5V4l1.707 1.707 2.086 2.086L26 9.5h-4.5c-.552 0-1-.448-1-1z" fill-rule="nonzero" fill-opacity="1" fill="#9bd5fd" stroke="none"></path></svg>
+                    <div class="file-items-title">
+                    <h3 class="items-title-h3">New design file</h3>
+                    <p class="items-title-parag">Design and prototype</p>
+                </div>
+                <svg class="svg" width="12" height="12" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg"><path d="M5.5 5.5v-5h1v5h5v1h-5v5h-1v-5h-5v-1h5z" fill-rule="nonzero" fill-opacity="1" fill="#000" stroke="none"></path></svg>
+            </div>
+                <div class="new-file-items row middle">
+                    <svg class="svg" width="32" height="32" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"><path d="M7 28h18c.552 0 1-.448 1-1V9.914c0-.265-.105-.52-.293-.707l-4.914-4.914C20.605 4.105 20.35 4 20.086 4H7c-.552 0-1 .448-1 1v22c0 .552.448 1 1 1z" fill-rule="nonzero" fill-opacity="1" fill="#9747ff" stroke="none"></path><path d="M19.297 20.862c.184.184.483.184.668 0l1.04-1.041c.185-.185.185-.484 0-.669l-5.947-5.948-1.71 1.71 5.949 5.948zm-6.655-6.655l-.94-.94-.427-2.136 2.136.427.94.94-1.71 1.709zm-1.58-4.139l2.842.569 7.809 7.808c.575.575.575 1.508 0 2.083l-1.041 1.04c-.575.576-1.508.576-2.082 0l-7.81-7.808-.567-2.842L10 9.856l1.062.212z" fill-rule="evenodd" fill-opacity="1" fill="#fff" stroke="none"></path><path d="M20.5 8.5V4l1.707 1.707 2.086 2.086L26 9.5h-4.5c-.552 0-1-.448-1-1z" fill-rule="nonzero" fill-opacity="1" fill="#c599ff" stroke="none"></path></svg>
+                    <div class="file-items-title">
+                    <h3 class="items-title-h3">New FigJam file</h3>
+                    <p class="items-title-parag">Whiteboard and diagram</p>
+                </div>
+                <svg class="svg" width="12" height="12" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg"><path d="M5.5 5.5v-5h1v5h5v1h-5v5h-1v-5h-5v-1h5z" fill-rule="nonzero" fill-opacity="1" fill="#000" stroke="none"></path></svg>
+            </div>
+            <div class="new-file-items row middle">
+            <svg class="svg" width="18" height="18" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg"><path d="M1 17V1h7v1H2v14h14v-6h1v7H1zm8.5-4.793l-.354-.353-2.5-2.5.708-.708L9 10.293V8c0-3.776 3.224-7 7-7h1v1h-1c-3.224 0-6 2.776-6 6v2.293l1.646-1.647.708.708-2.5 2.5-.354.353z" fill-rule="nonzero" fill-opacity="1" fill="#000" stroke="none"></path></svg>
+                    <div class="file-items-title">
+                        <h3 class="items-title-h3">Import file</h3>
+                    <p class="items-title-parag">Figma, Sketch, and image files</p>
+                </div></div>
+            </div>
+            <div class="view-container">
+                <div class="view-bar-container row middle between">
+                    <div class="last-w row middle"><p class="last-w-parag">Last viewed</p>
+                    <svg class="svg" width="6" height="6" viewBox="0 0 6 6" xmlns="http://www.w3.org/2000/svg"><path d="M1.06 1.475L.708 1.12 0 1.828l.354.354.707-.707zM2.829 3.95l-.353.353.353.354.354-.354-.354-.353zm2.475-1.768l.354-.354-.707-.707-.354.354.707.707zm-4.95 0l2.122 2.121.707-.707-2.121-2.121-.707.707zm2.829 2.121l2.121-2.121-.707-.707-2.121 2.121.707.707z" fill-rule="nonzero" fill-opacity="1" fill="#0000004d" stroke="none"></path></svg></div>
+                    <div class="view-toggle row middle">
+                        <span tabindex="0" class="svg-container option_button--toggled--2-LLL option_button--_optionButton--lWjmC view_mode_toggle--optionButtonToggled--4wf-t view_mode_toggle--_optionButton--21kTT" data-tooltip-type="text" data-tooltip="Show as grid"><svg class="first-toggle-svg" width="12" height="12" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg"><path d="M1 1h3v3H1V1zM0 0h5v5H0V0zm1 8h3v3H1V8zM0 7h5v5H0V7zm11-6H8v3h3V1zM8 0H7v5h5V0H8zm0 8h3v3H8V8zM7 7h5v5H7V7z" fill-rule="evenodd" fill-opacity="1" fill="#000" stroke="none"></path></svg></span>
+                        <span tabindex="0" class="svg-container option_button--untoggled--2KWMQ option_button--_optionButton--lWjmC view_mode_toggle--optionButtonUntoggled--260VM view_mode_toggle--_optionButton--21kTT" data-tooltip-type="text" data-tooltip="Show as list"><svg class="svg" width="14" height="11" viewBox="0 0 14 11" xmlns="http://www.w3.org/2000/svg"><path d="M0 0h14v1H0V0zm0 5h14v1H0V5zm14 5H0v1h14v-1z" fill-rule="evenodd" fill-opacity=".8" fill="#000" stroke="none"></path></svg></span>
+                    </div>
+                    <ul class="views-lists row ">
+                        <li class="view-items"></li>
+                        <li class="view-items"></li>
+                        <li class="view-items"></li>
+                        <li class="view-items"></li>
+                        <li class="view-items"></li>
+                        <li class="view-items"></li>
+                        <li class="view-items"></li>
+                        <li class="view-items"></li>
+                        <li class="view-items"></li>
+                        <li class="view-items"></li>
+                        <li class="view-items"></li>
+                        <li class="view-items"></li>
+                        <li class="view-items"></li>
+                        <li class="view-items"></li>
+                        <li class="view-items"></li>
+                        <li class="view-items"></li>
+                        <li class="view-items"></li>
+                        <li class="view-items"></li>
+                        <li class="view-items"></li>
+                        <li class="view-items"></li>
+                    </ul>
+                </div>
+            </div>
+            <span class="question-svg-container " data-onboarding-key="help-widget-zendesk"><svg class="svg" width="8" height="14" viewBox="0 0 8 14" xmlns="http://www.w3.org/2000/svg"><path d="M5 13H4v1h1v-1zM4 1C2.343 1 1 2.343 1 4H0c0-2.21 1.79-4 4-4 2.21 0 4 1.79 4 4 0 1.268-.59 2.398-1.51 3.13l-.083.065C5.553 7.833 5 8.852 5 10H4c0-1.424.662-2.694 1.694-3.518l.083-.064C6.519 5.87 7 4.992 7 4c0-1.657-1.343-3-3-3z" fill-rule="nonzero" fill-opacity="1" fill="#fff" stroke="none"></path></svg></span>
+        </main>
+    </div>
 </body>
 </html>
